aws_solution/modules/networking/security_group.tf
resource "aws_security_group" "allow_http" {
  vpc_id = aws_vpc.web_app_vpc.id
  name   = "allow-http"
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "allow-http"
  }
}
